# SPDX-FileCopyrightText: 2023 Christina Sørensen
# SPDX-FileContributor: Christina Sørensen
#
# SPDX-License-Identifier: AGPL-3.0-only

[package]
name = "rime"
description = "Nix Flake Input Versioning"
edition = "2021"
authors = ["Christina Sørensen <christina@cafkafk.com>"]
categories = ["command-line-utilities"]
license = "AGPL-3.0-only"
version = "0.1.7"
rust-version = "1.73.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.2", features = ["macros", "original-uri"] }
bytes = "1.5.0"
clap = { version = "4.4.11", features = ["cargo"] }
form_urlencoded = "1.2.1"
http-body-util = "0.1.0"
hyper = { version = "1.0.1", features = ["client"] }
log = "0.4.20"
pretty_env_logger = "0.5.0"
regex = "1.10.2"
reqwest = { version = "0.11.22", features = ["cookies", "json"] }
semver = "1.0.20"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
serde_yaml = "0.9.29"
tokio = { version = "1.35.0", features = ["macros", "rt-multi-thread"] }

[build-dependencies]
clap = { version = "4.4.11", features = ["cargo"] }
clap_complete = "4"
clap_mangen = "0.2.14"
