# SPDX-FileCopyrightText: 2023 Christina Sørensen
# SPDX-FileContributor: Christina Sørensen
#
# SPDX-License-Identifier: AGPL-3.0-only

[package]
name = "rime"
description = "Nix Flake Input Versioning"
edition = "2021"
authors = ["Christina Sørensen <christina@cafkafk.com>"]
categories = ["command-line-utilities"]
license = "AGPL-3.0-only"
version = "0.1.8"
rust-version = "1.74.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.4", features = ["macros", "original-uri"] }
bytes = "1.5.0"
clap = { version = "4.5.1", features = ["cargo"] }
form_urlencoded = "1.2.1"
http-body-util = "0.1.0"
hyper = { version = "1.2.0", features = ["client"] }
log = "0.4.21"
pretty_env_logger = "0.5.0"
regex = "1.10.3"
reqwest = { version = "0.11.24", features = ["json"] }
semver = "1.0.22"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
serde_yaml = "0.9.29"
tokio = { version = "1.43.1", features = ["macros", "rt-multi-thread"] }

[build-dependencies]
clap = { version = "4.5.1", features = ["cargo"] }
clap_complete = "4"
clap_mangen = "0.2.20"
